--- a/video1.html
+++ b/video1.html
@@ -3,151 +3,197 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lecteur Vidéo</title>
+  <title>Lecture vidéo</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      background: black;
+      font-family: 'Poppins', sans-serif;
+      background: #000;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    header {
+      text-align: center;
+      padding: 20px;
+      background: #111;
+    }
+
+    .banner {
+      display: inline-block;
+      background: linear-gradient(135deg,#0052d4,#4364f7,#6fb1fc);
+      color: white;
+      padding: 12px 30px;
+      font-size: 22px;
+      font-weight: 700;
+      border-radius: 50px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+    }
+
+    .video-container {
+      flex: 1;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      flex-direction: column;
-      overflow: hidden;
+      position: relative;
     }
 
     video {
       width: 100%;
-      height: auto;
-      max-height: 80vh;
-      background: black;
+      max-width: 900px;
+      border-radius: 12px;
+      background: #000;
     }
 
+    /* Contrôles overlay */
     .controls {
       position: absolute;
-      bottom: 20px;
-      width: 90%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    /* Barre de progression */
-    .progress-container {
-      width: 100%;
-      height: 6px;
-      background: rgba(255,255,255,0.3);
-      border-radius: 3px;
-      cursor: pointer;
-      margin-bottom: 15px;
-    }
-    .progress {
-      height: 100%;
-      width: 0;
-      background: red;
-      border-radius: 3px;
-    }
-
-    /* Boutons */
-    .buttons {
+      inset: 0;
       display: flex;
       justify-content: center;
       align-items: center;
       gap: 40px;
+      opacity: 0;
+      transition: opacity 0.3s;
     }
-    button {
+
+    .video-container:hover .controls {
+      opacity: 1;
+    }
+
+    .control-btn {
       background: rgba(0,0,0,0.6);
       border: none;
       color: white;
-      font-size: 18px;
-      padding: 15px 25px;
-      border-radius: 8px;
+      font-size: 22px;
+      padding: 14px 20px;
+      border-radius: 50%;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .control-btn:hover {
+      background: rgba(255,255,255,0.3);
+    }
+
+    /* Barre de progression */
+    .progress-container {
+      background: #222;
+      padding: 8px 15px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+    }
+
+    input[type="range"] {
+      flex: 1;
+      -webkit-appearance: none;
+      height: 6px;
+      border-radius: 3px;
+      background: #444;
       cursor: pointer;
     }
-    button:active {
-      transform: scale(0.95);
+
+    input[type="range"]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      width: 14px;
+      height: 14px;
+      background: #4364f7;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+
+    .time {
+      font-size: 14px;
+      min-width: 90px;
+      text-align: center;
     }
 
     /* Bouton retour */
-    .back {
-      position: absolute;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
+    .back-btn {
+      display: block;
+      margin: 20px auto;
+      padding: 12px 24px;
       background: #4364f7;
-      padding: 10px 20px;
-      border-radius: 20px;
-      font-size: 16px;
-      text-decoration: none;
       color: white;
-      font-weight: bold;
+      text-decoration: none;
+      font-weight: 600;
+      border-radius: 30px;
+      text-align: center;
+      width: 200px;
+      transition: background 0.3s;
+    }
+
+    .back-btn:hover {
+      background: #0052d4;
     }
   </style>
 </head>
 <body>
 
-  <!-- Vidéo -->
-  <video id="video" src="https://dl.dropboxusercontent.com/s/1w1srj7b5wsswhq0yctvu/video1.mp4" controlslist="nodownload"></video>
+  <header>
+    <div class="banner">Arrachetonchibre</div>
+  </header>
 
-  <!-- Contrôles -->
-  <div class="controls">
-    <div class="progress-container" id="progressContainer">
-      <div class="progress" id="progress"></div>
-    </div>
-    <div class="buttons">
-      <button id="back10">- 10 sec</button>
-      <button id="playPause">Lecture</button>
-      <button id="forward10">+ 10 sec</button>
+  <div class="video-container">
+    <video id="video" src="https://www.dropbox.com/s/xxxxxxx/video1.mp4?raw=1"></video>
+
+    <div class="controls">
+      <button class="control-btn" onclick="skip(-10)">-10s</button>
+      <button class="control-btn" onclick="togglePlay()">▶︎/❚❚</button>
+      <button class="control-btn" onclick="skip(10)">+10s</button>
     </div>
   </div>
 
-  <!-- Retour -->
-  <a href="videos.html" class="back">Retour</a>
+  <div class="progress-container">
+    <span class="time" id="current">0:00</span>
+    <input type="range" id="progress" value="0" min="0" max="100">
+    <span class="time" id="duration">0:00</span>
+  </div>
+
+  <a href="videos.html" class="back-btn">← Retour aux vidéos</a>
 
   <script>
-    const video = document.getElementById('video');
-    const playPause = document.getElementById('playPause');
-    const back10 = document.getElementById('back10');
-    const forward10 = document.getElementById('forward10');
-    const progress = document.getElementById('progress');
-    const progressContainer = document.getElementById('progressContainer');
+    const video = document.getElementById("video");
+    const progress = document.getElementById("progress");
+    const current = document.getElementById("current");
+    const duration = document.getElementById("duration");
 
-    // Play / Pause
-    playPause.addEventListener('click', () => {
+    function togglePlay() {
       if (video.paused) {
         video.play();
-        playPause.textContent = "Pause";
       } else {
         video.pause();
-        playPause.textContent = "Lecture";
       }
+    }
+
+    function skip(sec) {
+      video.currentTime += sec;
+    }
+
+    video.addEventListener("loadedmetadata", () => {
+      duration.textContent = formatTime(video.duration);
     });
 
-    // -10s
-    back10.addEventListener('click', () => {
-      video.currentTime -= 10;
+    video.addEventListener("timeupdate", () => {
+      current.textContent = formatTime(video.currentTime);
+      progress.value = (video.currentTime / video.duration) * 100;
     });
 
-    // +10s
-    forward10.addEventListener('click', () => {
-      video.currentTime += 10;
+    progress.addEventListener("input", () => {
+      video.currentTime = (progress.value / 100) * video.duration;
     });
 
-    // Mise à jour de la barre de progression
-    video.addEventListener('timeupdate', () => {
-      const percent = (video.currentTime / video.duration) * 100;
-      progress.style.width = percent + "%";
-    });
-
-    // Cliquer sur la barre = avancer/reculer
-    progressContainer.addEventListener('click', (e) => {
-      const width = progressContainer.clientWidth;
-      const clickX = e.offsetX;
-      const duration = video.duration;
-      video.currentTime = (clickX / width) * duration;
-    });
+    function formatTime(seconds) {
+      const min = Math.floor(seconds / 60);
+      const sec = Math.floor(seconds % 60).toString().padStart(2, "0");
+      return `${min}:${sec}`;
+    }
   </script>
 
 </body>
-  </html>
-  
+</html>
