--- a/video1.html
+++ b/video1.html
@@ -33,6 +33,14 @@
       box-shadow: 0 4px 15px rgba(0,0,0,0.2);
     }
 
+    h2.video-title {
+      text-align: center;
+      font-size: 22px;
+      font-weight: 600;
+      margin: 15px 0;
+      color: #fff;
+    }
+
     .video-container {
       flex: 1;
       display: flex;
@@ -139,8 +147,11 @@
     <div class="banner">Arrachetonchibre</div>
   </header>
 
+  <!-- Titre de la vidéo -->
+  <h2 class="video-title">Je joue à Action ou Vérité avec mon demi-frère</h2>
+
   <div class="video-container">
-    <video id="video" src="https://www.dropbox.com/s/xxxxxxx/video1.mp4?raw=1"></video>
+    <video id="video" src="https://v3.cdnde.com/x3/upload_9d26866401d25fd1e7f3452aab0c1307/44014/JOPORN_NET_44014_480p.mp4></video>
 
     <div class="controls">
       <button class="control-btn" onclick="skip(-10)">-10s</button>
